sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:14: error: type mismatch;
 found   : Double
 required: Int
      if (!plusPetit(i,i+ecart)) {echange(i,i+ecart);i+=1;a=1}
                     ^AlgCombSort:14: error: type mismatch;
 found   : Double
 required: Int
      if (!plusPetit(i,i+ecart)) {echange(i,i+ecart);i+=1;a=1}
                        ^AlgCombSort:14: error: type mismatch;
 found   : Double
 required: Int
      if (!plusPetit(i,i+ecart)) {echange(i,i+ecart);i+=1;a=1}
                                          ^AlgCombSort:14: error: type mismatch;
 found   : Double
 required: Int
      if (!plusPetit(i,i+ecart)) {echange(i,i+ecart);i+=1;a=1}
                                             ^